tests/baselines/reference/moduleAssignmentCompat2.errors.txt
tests/cases/compiler/moduleAssignmentCompat2.ts(9,8): error TS2709: Cannot use namespace 'A' as a type.
tests/cases/compiler/moduleAssignmentCompat2.ts(10,8): error TS2709: Cannot use namespace 'B' as a type.


==== tests/cases/compiler/moduleAssignmentCompat2.ts (2 errors) ====
    module A {
        export class C { }
    }
    module B {
        export class C { }
        export class D { }
    }
    
    var a: A;
           ~
!!! error TS2709: Cannot use namespace 'A' as a type.
    var b: B;
           ~
!!! error TS2709: Cannot use namespace 'B' as a type.
    
    a = b;
    b = a; // error